# MAI_teor_meh

./: .gitignore  pyproject.toml
lab1/: arrow.py  drawing_head.py  lab1.py
lab2/: lab2.py
lab3/: lab3.py
