[tool.poetry]
name = "teor-meh"
version = "0.1.0"
description = ""
authors = ["Александр Жуховицкий <adzhukhovitskij@mai.education>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
sympy = "^1.13.3"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
